# JohnConwayGameofLife

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  LargeWorldx64.bat  LargeWorldx86.bat  README.md  Source.cpp  gameoflife.sln  gameoflife.vcxproj  gameoflife.vcxproj.filters
cmake/: GNUOptions.cmake  MSVCOptions.cmake
life/: CMakeLists.txt  Camera.hpp  GameOfLife.cpp  GameOfLife.hpp  main.cpp  olcPixelGameEngine.cpp
